--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -579,4 +579,52 @@ body {
   .logo-l > div .custom-col {
     flex-basis: 100%;
   }
+}
+
+footer {
+  margin-top: 100px;
+  border-top: 1px solid rgba(128, 128, 128, 0.625);
+  padding-top: 50px;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+}
+footer .first {
+  position: relative;
+}
+footer .first > img {
+  width: 80px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+footer .first > p {
+  font-size: 14px;
+  color: rgba(255, 255, 255, 0.732);
+}
+footer .second > h6 {
+  letter-spacing: 1px;
+  color: white;
+}
+footer .second > p > a {
+  text-decoration: none;
+  font-size: 14px;
+  color: rgba(255, 255, 255, 0.732);
+}
+footer .third > p > a {
+  text-decoration: none;
+  font-size: 15px;
+  color: rgba(255, 255, 255, 0.732);
+}
+footer .fourth > h6 {
+  letter-spacing: 6px;
+  color: white;
+}
+footer .fourth > p {
+  text-decoration: none;
+  font-size: 14px;
+  color: rgba(255, 255, 255, 0.732);
+}
+footer .fifth {
+  position: absolute;
+  bottom: 30%;
+  font-size: 13px;
+  left: 0;
 }/*# sourceMappingURL=master.css.map */
