--- a/assets/css/master.scss
+++ b/assets/css/master.scss
@@ -634,3 +634,58 @@ body {
         }
     }
 }
+
+footer {
+    // background-color: #1d1d1d;
+    margin-top: 100px;
+    border-top: 1px solid rgba(128, 128, 128, 0.625);
+    padding-top: 50px;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    .first {
+        position: relative;
+        >img {
+            // border: 1px solid red;
+            width: 80px;
+            object-fit: cover;
+        }
+        >p {
+            font-size: 14px;
+            color: rgba(255, 255, 255, 0.732);
+        }
+    }
+    .second {
+        >h6 {
+            letter-spacing: 1px;
+            color: white;
+        }
+        >p>a {
+            text-decoration: none;
+            font-size: 14px;
+            color: rgba(255, 255, 255, 0.732);
+        }
+    }
+    .third {
+        >p>a {
+            text-decoration: none;
+            font-size: 15px;
+            color: rgba(255, 255, 255, 0.732);
+        }
+    }
+    .fourth {
+        >h6 {
+            letter-spacing: 6px;
+            color: white;
+        }
+        >p {
+            text-decoration: none;
+            font-size: 14px;
+            color: rgba(255, 255, 255, 0.732);
+        }
+    }
+    .fifth {
+        position: absolute;
+        bottom: 30%;
+        font-size: 13px;
+        left: 0;
+    }
+}
