--- a/assets/css/master.scss
+++ b/assets/css/master.scss
@@ -108,11 +108,14 @@ body {
     }
     .texth {
         // background-color: red;
-        width: 400px;
+        width: 300px;
         height: 300px;
         position: absolute;
         top: 25%;
         left: 11%;
+        @media (min-width: 768px) {
+            width: 400px;
+        }
         >div:nth-of-type(1) {
             display: flex;
             flex-wrap: wrap;
@@ -134,12 +137,15 @@ body {
             }
         }
         >h1 {
-            font-size: 45px;
+            font-size: 40px;
             color: white;
             font-weight: bold;
             line-height: 1;
             >span {
                 color: #fdb407;
+            }
+            @media (min-width: 768px) {
+                font-size: 45px;
             }
         }
         >a {
